// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My Label
  </label>
  <input
    id="id-1-1"
    name="TextBox"
    type="text"
    value=""
  />
</div>
`;

exports[`TextBox component The Rendered HTML should have a no label when passed an empty string as label 1`] = `
<div
  class="rfe-form__row"
>
  <input
    id="id-4-1"
    name="TextBox"
    placeholder="textbox placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`TextBox component The Rendered HTML should have a placeholder when passed 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-3-1"
  >
    My Label
  </label>
  <input
    id="id-3-1"
    name="TextBox"
    placeholder="textbox placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`TextBox component handling input should set a value when passed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-5-1"
  >
    My Label
  </label>
  <input
    id="id-5-1"
    name="TextBox"
    type="text"
    value="My Input Value"
  />
</div>
`;

exports[`TextBox component handling input should update a value when changed 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-7-1"
  >
    My Label
  </label>
  <input
    id="id-7-1"
    name="TextBox"
    type="text"
    value="Updated Value"
  />
</div>
`;
